--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     },
     "devDependencies": {
         "axios": "^1.1.2",
+        "chokidar": "^3.5.3",
         "laravel-vite-plugin": "^0.7.2",
         "vite": "^4.0.0"
     }
