--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,14 @@
     "keywords": ["laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
         "guzzlehttp/guzzle": "^7.5",
         "laravel/framework": "^10.4",
         "laravel/octane": "^1.5",
         "laravel/passport": "^11.8",
         "laravel/tinker": "^2.8",
         "lorisleiva/laravel-actions": "^2.5",
+        "ramsey/uuid": "^4.7",
         "spatie/laravel-data": "^3.2",
         "spatie/laravel-query-builder": "^5.2"
     },
