provider-login-branch: finish adding github login to the application

--- a/.env.example
+++ b/.env.example
@@ -57,6 +57,11 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+OCTANE_SERVER=swoole
+
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+
 #TELESCOPE_ENABLED=true
 
 # Sail related keys
