--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.4",
         "laravel/octane": "^1.5",
         "laravel/passport": "^11.8",
+        "laravel/socialite": "^5.6",
         "laravel/tinker": "^2.8",
         "lorisleiva/laravel-actions": "^2.5",
         "ramsey/uuid": "^4.7",
