create-category-branch: get, show, add, update, and delete category for the admin. get and show category for user with a json service provider to fully customize the pagination with pest tests

--- a/.env.example
+++ b/.env.example
@@ -57,10 +57,12 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-OCTANE_SERVER=swoole
+OCTANE_SERVER=
 
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
+BUGSNAG_API_KEY=
+
 
 #TELESCOPE_ENABLED=true
 
