--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "bugsnag/bugsnag-laravel": "^2.0",
         "guzzlehttp/guzzle": "^7.5",
         "laravel/framework": "^10.4",
         "laravel/octane": "^1.5",
