--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "lorisleiva/laravel-actions": "^2.5",
         "ramsey/uuid": "^4.7",
         "spatie/laravel-data": "^3.2",
+        "spatie/laravel-permission": "^5.10",
         "spatie/laravel-query-builder": "^5.2"
     },
     "require-dev": {
