create-cart-order: change order table, factory, and DTO. add e_payments table, and DTO, add payment_gateways table, install stripe and paypal sdks. add factory design pattern and change code of add and remove products from carts

--- a/.env.example
+++ b/.env.example
@@ -61,7 +61,14 @@ OCTANE_SERVER=
 
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
+
 BUGSNAG_API_KEY=
+
+STRIPE_SECRET_KEY=
+STRIPE_PUB_KEY=
+
+CLIENT_ID=
+CLIENT_SECRET=
 
 
 #TELESCOPE_ENABLED=true
