--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,12 @@
         "laravel/socialite": "^5.6",
         "laravel/tinker": "^2.8",
         "lorisleiva/laravel-actions": "^2.5",
+        "paypal/paypal-checkout-sdk": "^1.0",
         "ramsey/uuid": "^4.7",
         "spatie/laravel-data": "^3.2",
         "spatie/laravel-permission": "^5.10",
-        "spatie/laravel-query-builder": "^5.2"
+        "spatie/laravel-query-builder": "^5.2",
+        "stripe/stripe-php": "^10.17"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.13",
