--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "paypal/paypal-checkout-sdk": "^1.0",
         "ramsey/uuid": "^4.7",
         "spatie/laravel-data": "^3.2",
+        "spatie/laravel-model-states": "^2.4",
         "spatie/laravel-permission": "^5.10",
         "spatie/laravel-query-builder": "^5.2",
         "stripe/stripe-php": "^10.17"
