--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         "spatie/laravel-model-states": "^2.4",
         "spatie/laravel-permission": "^5.10",
         "spatie/laravel-query-builder": "^5.2",
-        "stripe/stripe-php": "^10.17"
+        "stripe/stripe-php": "^10.17",
+        "symfony/http-client": "^6.2",
+        "symfony/mailgun-mailer": "^6.3"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.13",
