--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
             - redis
             - meilisearch
             - mailpit
+            - phpmyadmin
     mysql:
         image: 'mysql/mysql-server:8.0'
         ports:
@@ -89,6 +90,18 @@ services:
             - '${FORWARD_MAILPIT_DASHBOARD_PORT:-8025}:8025'
         networks:
             - sail
+    phpmyadmin:
+        image: phpmyadmin/phpmyadmin
+        links:
+             - mysql:mysql
+        ports:
+             - 8080:80
+        environment:
+             MYSQL_USERNAME: "${DB_USERNAME}"
+             MYSQL_ROOT_PASSWORD: "${DB_PASSWORD}"
+             PMA_HOST: mysql
+        networks:
+             - sail
 networks:
     sail:
         driver: bridge
